2002-12-30  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.[ch]
	(apotheke_directory_block_monitor_handler),
	(apotheke_directory_unblock_monitor_handler): New methods.

	* src/apotheke-view.c (execute_cvs_command): Block all file
	monitoring handler and update the file list after cvs command
	completion.
	
2002-12-30  Jens Finke  <jens@triq.net>

	Implemented file monitoring and status updates for files which are
	modified by external programs.

	* src/apotheke-directory.c (apotheke_directory_dispose): Free
	monitor handles.
	(change_entry_status),
	(get_iter_by_filename),
	(dir_monitor_callback),
	(entries_monitor_callback), 
	(add_monitors): New functions.

2002-12-30  Jens Finke  <jens@triq.net>

	* src/apotheke-cvs-entries.c (apotheke_cvs_entries_get_entries):
	Overread lines in CVS/Entries with only a 'D'.
	
2002-12-27  Jens Finke  <jens@triq.net>

     	* configure.in: Removed GNOME_COMPILE_WARNINGS.

	* src/Makefile.am: Fixed handling of server.in.in file.

2002-11-28  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c: Added new mtime column, which is used
	to sort the view by date.
	(apply_cvs_status): Obtain the date string with ctime (shouldn't
	this return the date in the current locale format?), set to Dummy
	Timestamp for added files.

	* src/apotheke-view.c (set_up_tree_view): Use a separate sort id
	to define which model column is used for sorting. 

2002-11-26  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c (apotheke_directory_construct): Setup
	sort function.
	(apotheke_sort_func): Reworked.

	* src/apotheke-view.c (setup_tree_view): Fixed column sorting ids.

2002-11-26  Jens Finke  <jens@triq.net>

	* src/apotheke-file.h: Removed.
	
	* src/Makefile.am (SOURCES): Removed apotheke-file.h

	* src/apotheke-cvs-entries.[ch] (apotheke_cvs_entries_get_entries):
	Return list of all CVS entries.

	* src/apotheke-directory.[ch]: Use the tree model directly to
	store all file information. Don't use ApothekeFile anymore.
